--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -300,3 +300,173 @@
 \AgdaBound{fin}\<%
 \end{code}
 %</eval>
+
+%<*eval2>
+\begin{code}
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Steps}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitive{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{N}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaBound{N}\<%
+\\
+%
+\>[4]\AgdaSymbol{→}%
+\>[128I]\AgdaDatatype{Value}\AgdaSpace{}%
+\AgdaBound{N}\<%
+\\
+\>[.][@{}l@{}]\<[128I]%
+\>[6]\AgdaComment{----------}\<%
+\\
+%
+\>[4]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Steps}\AgdaSpace{}%
+\AgdaBound{L}\<%
+\\
+%
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}
+
+\AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}
+%
+\AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN}\AgdaSpace{}%
+\AgdaBound{L}
+
+\AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Steps}\AgdaSpace{}%
+\AgdaBound{L}\<%
+\\
+\>[0]\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{progress}\AgdaSpace{}%
+\AgdaBound{L}\<%
+\\
+\>[0]\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}%
+\>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\AgdaInductiveConstructor{done}\AgdaSpace{}%
+\AgdaBound{⇑L}%
+\>[31]\AgdaSymbol{=}%
+\>[34]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{closed⇑→Value}\AgdaSpace{}%
+\AgdaBound{⇑L}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
+\AgdaBound{L⇄M}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaSymbol{...}%
+\>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{fin}%
+\>[35]\AgdaSymbol{=}%
+\>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
+\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{fin}\<%
+\\
+\>[0]\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\AgdaInductiveConstructor{step↪}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
+\AgdaBound{L↪M}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaSymbol{...}%
+\>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{fin}%
+\>[35]\AgdaSymbol{=}%
+\>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
+\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{fin}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{eval}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Steps}\AgdaSpace{}%
+\AgdaBound{L}\<%
+\\
+\>[0]\AgdaFunction{eval}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{eval´}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{strong-norm}\AgdaSpace{}%
+\AgdaBound{L}\AgdaSymbol{)}\<%
+\end{code}
+%</eval2>
