--- a/paper/references.bib
+++ b/paper/references.bib
@@ -129,3 +129,8 @@
 	author={Reynolds, John C.},
 	year={1998}
 }
+@unpublished{ren-sub,
+	author = {Conor McBride},
+	title  = {Type-Preserving Renaming and Substitution},
+	year   = {2005}
+}
