Fix indent and font

--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -237,8 +237,8 @@
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaBound{⇑L}%
-\>[31]\AgdaSymbol{=}%
-\>[34]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\>[31]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{just}\AgdaSpace{}%
@@ -249,7 +249,7 @@
 \AgdaBound{L}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{gas}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{L⇄M}\AgdaSpace{}%
@@ -259,12 +259,15 @@
 \AgdaBound{gas}\<%
 \\
 \>[0]\AgdaSymbol{...}%
+\>[15]
+\AgdaIndentSpace
+\AgdaIndentSpace
 \>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaBound{M⇝N}\AgdaSpace{}%
 \AgdaBound{fin}\AgdaSpace{}%
-\AgdaSymbol{=}%
-\>[37]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\>[31]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
 \AgdaBound{L⇄M}\AgdaSpace{}%
@@ -276,7 +279,7 @@
 \AgdaBound{L}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{gas}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{L↪M}\AgdaSpace{}%
@@ -290,8 +293,8 @@
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaBound{M⇝N}\AgdaSpace{}%
 \AgdaBound{fin}\AgdaSpace{}%
-\AgdaSymbol{=}%
-\>[37]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\>[31]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
 \AgdaBound{L↪M}\AgdaSpace{}%
