--- a/paper/references.bib
+++ b/paper/references.bib
@@ -134,3 +134,17 @@
 	title  = {Type-Preserving Renaming and Substitution},
 	year   = {2005}
 }
+@phdthesis{Schafer,
+	title = {Engineering formal systems in constructive type theory},
+	author = {Schäfer, Steven},
+	doi = {http://dx.doi.org/10.22028/D291-29909},
+	year = {2019}
+}
+@book{Girard,
+	series = {Cambridge {Tracts} in {Theoretical} {Computer} {Science}},
+	title = {Proofs and {Types}},
+	number = {7},
+	publisher = {Cambridge University Press},
+	author = {Girard, Jean-Yves and Lafont, Yves and Taylor, Paul},
+	year = {1989}
+}
